--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "classnames": "2.3.1",
         "history": "5.0.0",
         "moment": "2.29.1",
+        "ndb": "1.1.5",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-loader-spinner": "4.0.0",
