--- a/package.json
+++ b/package.json
@@ -3,31 +3,53 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "dev": "react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "dependencies": {
-        "classnames": "2.3.1",
+        "@hookform/resolvers": "2.4.0",
+        "clsx": "1.1.1",
+        "faker": "5.5.3",
         "history": "5.0.0",
-        "moment": "2.29.1",
+        "mobx": "6.2.0",
+        "mobx-react-lite": "3.2.0",
         "react": "17.0.2",
+        "react-content-loader": "6.0.3",
         "react-dom": "17.0.2",
-        "react-loader-spinner": "4.0.0",
-        "react-redux": "7.2.3",
+        "react-hook-form": "7.2.0",
+        "react-loading-skeleton": "2.2.0",
+        "react-query": "3.13.10",
         "react-router-dom": "6.0.0-beta.0",
-        "react-scripts": "4.0.3",
-        "redux": "4.0.5",
-        "redux-thunk": "2.3.0",
-        "shortid": "2.2.16",
-        "waait": "1.0.5"
+        "sanitize.css": "12.0.1",
+        "uuid": "8.3.2",
+        "waait": "1.0.5",
+        "yup": "0.32.9"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "5.11.10",
+        "@testing-library/react": "11.2.6",
+        "@testing-library/user-event": "13.1.5",
+        "@types/faker": "5.5.3",
+        "@types/jest": "26.0.22",
+        "@types/node": "14.14.41",
         "@types/react": "17.0.3",
         "@types/react-dom": "17.0.3",
-        "redux-logger": "3.0.6",
-        "sass": "1.32.8",
-        "typescript": "4.2.3"
+        "@types/uuid": "8.3.0",
+        "axios": "0.21.1",
+        "react-scripts": "4.0.3",
+        "sass": "1.32.10",
+        "serve": "11.3.2",
+        "stylelint": "13.12.0",
+        "stylelint-config-recess-order": "2.3.0",
+        "stylelint-config-standard": "21.0.0",
+        "stylelint-declaration-block-no-ignored-properties": "2.3.0",
+        "stylelint-order": "4.1.0",
+        "stylelint-scss": "3.19.0",
+        "stylelint-selector-no-empty": "1.0.8",
+        "stylelint-use-nesting": "3.0.0",
+        "ts-node": "9.1.1",
+        "typescript": "4.2.4"
     }
 }
